<resources>
    <string name="app_name">istv_andorid</string>
    <!-- Login Strings -->
    <string name="prompt_username">Korisničko ime</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Uloguj se</string>
    <string name="action_sign_in_short">Uloguj se</string>
    <string name="welcome">"Dobrodošli !"</string>
    <string name="invalid_username">Nevalidno korisničko ime</string>
    <string name="invalid_password">Lozinka mora biti duža od 4 karaktera</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_products">Proizvodi</string>
    <string name="menu_korisnici">Korisnici</string>
    <string name="menu_cenovnik">Cenovnik</string>
    <string name="menu_podesavanja">Podešavanja</string>


    <string name="dodaj_stavku">Dodaj stavku</string>
    <string name="menu_proizvodi">Proizvodi</string>
    <string name="menu_logout">Logout</string>
    <string name="product_code">Šifra proizvoda</string>
    <string name="product_name">Naziv proizvoda</string>
    <string name="product_price">Cena proizvoda</string>
    <string name="product_quantity">Na lageru</string>
    <string name="sacuvaj">Sačuvaj</string>
    <string name="menu_orders">Porudžbine</string>
    <string name="buyer_name">Ime kupca</string>
    <string name="menu_kupci">Kupci</string>
    <string name="buyer_surname">Prezime</string>
    <string name="buyer_company">Firma</string>
    <string name="buyer_city">Grad</string>
    <string name="order_status">Status porudžbine</string>
    <string name="order_deliveryAddress">Adresa dostave</string>
    <string name="order_company">Naziv kompanije kupca</string>
    <string name="order_price">Cena</string>
</resources>