<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_proizvodi">

    <fragment
        android:id="@+id/nav_proizvodi"
        android:name="com.example.istv_andorid.ui.products.ProductFragment"
        android:label="@string/menu_proizvodi"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_kupci"
        android:name="com.example.istv_andorid.ui.buyers.BuyerFragment"
        android:label="@string/menu_kupci"
        tools:layout="@layout/fragment_buyer" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.istv_andorid.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_order" />
</navigation>